The Peirce pattern

--- a/_posts/2017-07-31-The-Peirce-pattern.html
+++ b/_posts/2017-07-31-The-Peirce-pattern.html
@@ -228,5 +228,5 @@ Check it out on github.
 </p>
 
 <p>
-Benjamin: an open-source library that formalizes a Lispy way to solve the idempotency with side-effects problem.  
+Benjamin: an open-source library that formalizes a Lispy way to implement idempotency with side-effects.  
 </p>
