--- a/_posts/2017-08-07-Timed-idempotency.html
+++ b/_posts/2017-08-07-Timed-idempotency.html
@@ -9,7 +9,7 @@ categories: clojure idempotency side_effects patterns
 
 
 <div class="figure">
-<p><img src="images/benjamin.jpg" alt="benjamin.jpg" />
+<p><img src="file:///images/benjamin.jpg" alt="benjamin.jpg" />
 </p>
 </div>
 
