--- a/20240718T060528--an-algebra-of-recursive-functions__clojure_lisp_scheme.html
+++ b/20240718T060528--an-algebra-of-recursive-functions__clojure_lisp_scheme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-07-27 Sat 01:51 -->
+<!-- 2024-07-27 Sat 02:03 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>An algebra of recursive functions</title>
@@ -713,7 +713,7 @@ recursive functions.
 <p>
 In <i>Gödel, Escher and Bäch</i>, Douglas Hofstadter devised the BlooP and
 the FlooP languages to illustrate the difference between bounded loops
-(FOR) and unbounded loops (WHILE, GOTO), correspondin to primitive
+(FOR) and unbounded loops (WHILE, GOTO), corresponding to primitive
 recursion and general recursion respectively. Adding unbounded loops
 makes the language general recursive and Turing-complete, as are all
 real-world computer programming languages. (Hofstadter, Douglas R., 1999)
