--- a/20240718T060528--the-theory-of-recursion__clojure_lisp_scheme.html
+++ b/20240718T060528--the-theory-of-recursion__clojure_lisp_scheme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-07-27 Sat 12:34 -->
+<!-- 2024-07-27 Sat 13:04 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>The theory of recursion</title>
@@ -274,8 +274,8 @@ reasoning but pattern recognition.
 To understand the practicalities of recursion in Lisp, <i>The Little
 Schemer</i> is indeed a fantastic reference. In contrast, to understand
 the theoretical foundation of Lisp, the traditional mathematical
-treatment of he topic cannot be avoided. Despite all of this, I
-believe the use of computer programs can be beneficial here as well.
+treatment of the topic cannot be avoided. Still, I believe the use of
+computer programs can be beneficial here as well.
 </p>
 
 <p>
@@ -303,11 +303,11 @@ crossroads of Logic, Mathematics and Computer Science, such as:
 </ul>
 
 <p>
-The goal is not only to show how primitive recursion works, but also
-to convey its beauty: with how little we can build so much.
-Primitive recursion is not complicated, but surprising. Indeed, it
-takes only three initial functions closed under two operations to
-produce all of the familiar functions on the natural numbers.
+We would like to show how primitive recursion works, but also to
+convey its beauty: with how little we can build so much.  Primitive
+recursion is not complicated, but surprising. Indeed, it takes only
+three initial functions closed under two operations to produce all of
+the familiar functions on the natural numbers.
 </p>
 
 <blockquote>
@@ -323,11 +323,11 @@ recursive. (Brainerd, Walter S. and Landweber, Lawrence H., 1974)
 <p>
 It might be interesting to start with a quick glance at the
 traditional presentation of the topic. Wikipedia has a decent <a href="https://en.wikipedia.org/wiki/Primitive_recursive_function">entry</a>,
-or have a look at <a href="https://plato.stanford.edu/entries/recursive-functions/">Stanford Encyclopedia of Philosophy</a>. Look at the
-formulas describing primitive recursion, even if they are opaque. At
-the end of our exercise, we will have a basis of comparison. We might
-know the answer to the question whether or not a Lisp exposé improve
-on the learning experience?
+<a href="https://plato.stanford.edu/entries/recursive-functions/">Stanford Encyclopedia of Philosophy too</a>. Take a look at the formulas
+describing primitive recursion, no matter how opaque in the eyes of a
+layman. At the end of our exercise, we will have a basis of
+comparison. We might answer the question whether or not a Lisp exposé
+improves on the learning experience.
 </p>
 
 <p>
